Well was trying to build, but as86 segfault. So first step will be:
C99ify the code and clean the current formating mess.

Will fix issues after that.

--- a/bcc/Makefile
+++ b/bcc/Makefile
@@ -6,7 +6,7 @@
 PREFIX=/usr
 LIBPRE=$(PREFIX)
 
-CFLAGS	=-O
+CFLAGS	=-Os -Ilibc/include/
 LDFLAGS	=-s
 BINDIR	=$(PREFIX)/bin
 LIBDIR	=$(LIBPRE)/lib/bcc
