Update bcc/makefile to add the include folder in the path.

--- a/bcc/Makefile
+++ b/bcc/Makefile
@@ -6,7 +6,7 @@
 PREFIX=/usr
 LIBPRE=$(PREFIX)
 
-CFLAGS	=-Os -Ilibc/include/
+CFLAGS	=-Os -Iinclude/
 LDFLAGS	=-s
 BINDIR	=$(PREFIX)/bin
 LIBDIR	=$(LIBPRE)/lib/bcc
@@ -44,11 +44,7 @@ clean realclean:
 	rm -f bcc bcc-cc1 ncc bcc09 ccc bcc.o $(OBJS)
 
 
-$(OBJS):  bcc.h align.h const.h types.h \
-          byteord.h condcode.h gencode.h \
-	  input.h label.h os.h output.h \
-	  parse.h proto.h reg.h sc.h scan.h \
-	  sizes.h table.h type.h
+$(OBJS):  include/*.h
 
 .c.o:
 	$(CC) $(BCCARCH) $(CFLAGS) -c $<
